finish frontend page

--- a/public/locales/en/track.json
+++ b/public/locales/en/track.json
@@ -4,5 +4,5 @@
   "visitCount": "Visit Count",
   "ipCount": "IP Count",
   "mobileVisit": "Mobile Visit",
-  "pcVisit": "Mobile Visit"
+  "pcVisit": "PC Visit"
 }
